--- a/Views/all_categories.cshtml
+++ b/Views/all_categories.cshtml
@@ -1,10 +1,12 @@
-<h1>Categories</h1>
+<h1>All categories</h1>
 @if (@Model.Count == 0)
 {
-  <h3>No categories have been added yet!</h3>
+  <p>There are no categories.</p>
 }
-@foreach (var category in Model)
-{
-  <h3><a href="/all_categories/@category.GetId()">@category.GetName()</a></h3>
-}
-<p><a href="/">Back home</a></p>
+<ul>
+  @foreach (var category in Model)
+  {
+    <li><a href="/categories/@category.GetId()">@category.GetName()</a></li>
+  }
+</ul>
+<a href="/categories/new">Add new category</a>
