--- a/Views/category.cshtml
+++ b/Views/category.cshtml
@@ -1,9 +1,17 @@
-<h3>Here are all the tasks in this category:</h3>
-<ol>
-  @foreach (var task in @Model["tasks"])
-  {
-    <li>@task.GetDescription()</li>
-  }
-</ol>
-<p><a href='/all_categories/@Model["category"].GetId()/tasks/new'>Add a new task</a></p>
+<h2>Here are all the tasks in this category:</h2>
+
+@if (@Model["tasks"].Count == 0)
+{
+  <p>No tasks have been added yet!</p>
+}
+else
+{
+  <ol>
+    @foreach (var task in @Model["tasks"])
+    {
+      <li>@task.GetDescription()</li>
+    }
+  </ol>
+}
+<p><a href="/tasks/new">Add a new task</a></p>
 <p><a href="/">Return to Main Page</a></p>
