--- a/Views/category_form.cshtml
+++ b/Views/category_form.cshtml
@@ -1,8 +1,5 @@
-<h1>Add a category</h1>
-<p>Add a category here:</p>
-<form action="/all_categories" method="post">
-  <label for = "category-name">Category name</label>
-  <input id="category-name" name = "category-name" type="text">
+<form action="/categories/new" method="post">
+  <label for="category-name">Category name</label>
+  <input id="category-name" name="category-name" type="text">
   <button type="submit">Add</button>
 </form>
-<p><a href="/">Back home</a></p>
