--- a/Views/index.cshtml
+++ b/Views/index.cshtml
@@ -1,3 +1,3 @@
 <h1>To Do List</h1>
-<a href="/all_categories">View categories</a>
-<a href="/all_categories/new">Add a new category</a>
+<h4><a href="/categories">View Categories</a></h4>
+<h4><a href="/tasks">View Tasks</a></h4>
