--- a/Views/task_form.cshtml
+++ b/Views/task_form.cshtml
@@ -1,7 +1,14 @@
-<h1>To Do List</h1>
-<h3>Add a new task:</h3>
-<form action='/tasks' method="post">
-  <label for="new-task">Task Description</label>
-  <input type="text" name="new-task" id='new-task'>
-  <button type="submit">Add Task</button>
+<h1>Add a new task</h1>
+<form action="/tasks/new" method="post">
+  <label for="task-description">Task description:</label>
+  <input id="task-description" name="task-description" type="text">
+  <select name="category-id">
+    @foreach (var category in Model)
+    {
+      <option value="@category.GetId()">@category.GetName()</option>
+    }
+  </select>
+  <button type="submit">Add new task</button>
 </form>
+<p><a href="/">Back home</a></p>
+<p><a href="/tasks">View all tasks</a></p>
